[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-data-example"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    'exceptiongroup; python_version<"3.11"',
    "jupyterlab",
    "altair",
    "pandas",
    "pyarrow",
]
authors = [
  { name="Ben Welsh", email="b@palewi.re" },
]
description = "An example of how to use the European weather agency to gridded climate data"
license = {text = "MIT"}
readme = "README.md"